--- a/painting2.html
+++ b/painting2.html
@@ -22,7 +22,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                      <a class="nav-link" href="./painting1.html">Painting #1</a>
+                      <a class="nav-link" href="./index.html">Painting #1</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="./painting2.html">Painting #2</a>
